fix(CORS): now CORS receives http localhost